frontend/src/pages/HomeScreen/home.module.css
.fullsize{
    width: 100%;
    flex-direction: column;
    background-color: #efefef;
    flex: content;
}

.center{
    min-height: 100%;
}

.dashboard{
    max-width: 90%;
    min-height: 70vh;
    overflow-y: hidden;
    margin-left: 4rem;
}

.future-subjects-area {
    display: grid;
    grid-template-rows: auto auto auto;
    padding: 10px;
}

.container-90{
    width: min(max(800px, 90%), 100%);
    padding-left: 2rem;
    padding-right: 2rem;
    align-self: center;
    justify-self: center;
    margin: 0 auto;
}

